--- a/naomiweb/static/style.css
+++ b/naomiweb/static/style.css
@@ -1,5 +1,19 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
-	background: black;
-	color: white;
-	font-family: sans-serif;
+    font-family: sans-serif;
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+    padding: 15px;
+    text-align: center;
 }
